force-app/main/default/objects/Productos_Activos_Compania__c/Productos_Activos_Compania__c.object-meta.xml
<CustomObject>
    <label>Producto Activo Compañía</label>
    <nameField>
        <label>Nombre de Producto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos Activos Compañía</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>