force-app/main/default/objects/Productos_Activos_Compania__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por entregar</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
                <default>true</default>
                <label>Entregado</label>
            </value>
            <value>
                <fullName>Por retirar</fullName>
            </value>
            <value>
                <fullName>Retirado</fullName>
            </value>
            <value>
                <fullName>Pedido de reposición</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>