force-app/main/default/objects/Productos_Activos_Compania__c/fields/Modulo_de_paciente__c.field-meta.xml
<CustomField>
    <fullName>Modulo_de_paciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modulo de paciente</label>
    <referenceTo>Modulo_de_paciente__c</referenceTo>
    <relationshipLabel>Productos Activos Compañía</relationshipLabel>
    <relationshipName>Productos_Activos_Compania</relationshipName>
    <type>Lookup</type>
</CustomField>