force-app/main/default/objects/Productos_Activos_Compania__c/fields/Nro_de_serie__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_serie__c</fullName>
    <label>Nro de serie</label>
    <length>100</length>
    <type>Text</type>
</CustomField>